<resources>
    <string name="app_name">Game Vault</string>
    <string name="app_version">V 1.0.0</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_shop_title">Shop</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_library_title">Library</string>
    <string name="search_hint">Search Here</string>
    <string name="side_menu_button_text">Side Menu</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="back">Back</string>
    <string name="create_account">Create Account</string>
    <string name="join_gamevault_and_start_playing">Join GameVault and start playing</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service </string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="no_account">No account?</string>
    <string name="create_one">Create one</string>
    <string name="user_profile_pic">User Profile Pic</string>
    <string name="user">User</string>
</resources>