<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:icon="@drawable/order"
            android:title="@string/side_nav_orders_title"
            android:checked="true"
        />
        <item
            android:icon="@drawable/favorite"
            android:title="@string/side_nav_wishlist_title"
        />
        <item
            android:icon="@drawable/inbox"
            android:title="@string/side_nav_message_title"
        />
        <item
            android:icon="@drawable/settings"
            android:title="@string/side_nav_settings_title"
        />
    </group>

    <group>
        <item
            android:icon="@drawable/login"
            android:title="@string/side_nav_login_title"
        />
        <item
            android:icon="@drawable/logout_solid"
            android:title="@string/side_nav_logout_title"
        />
    </group>
</menu>